# repo-template-mkslides

./: .editorconfig  pyproject.toml
.github/: publish_slides_failure.md
.github/workflows/: publish_slides.yaml
